# emhass

./: .coveragerc  .gitignore  .readthedocs.yaml  AGENTS.md  Add-onEmulateDocker  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sync  LICENSE  README.md  bconfig.json  config.json  config.yaml  config_emhass.json  config_emhass.yaml  deploy_docker.mk  develop.md  docker-entrypoint.sh  gunicorn.conf.py  options.json  prek.toml  pyproject.toml  requirements.txt  requirements_addon.txt  requirements_webserver.txt  secrets(example).yaml  secrets_emhass(example).yaml  setup.py  sonar-project.properties  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.gimlet/: unique-silence-emhass-0ffc.yaml  unique-silence-emhass.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-quality.yml  codecov.yaml  codeql.yml  docker-build-test.yaml  publish_docker copy.yaml  publish_docker-test.yaml  publish_docker.yaml  python-package.yml  python-publish.yml  python-test.yml  updateCEC.yaml  updatePVLibDB.yaml  upload-package-to-conda.yaml  upload-package-to-pypi.yaml
.sonarlint/: connectedMode.json
conda/: meta.yaml
data/: associations.csv  cec_inverters.pbz2  cec_modules.pbz2  config_defaults.json  data_load_cost_forecast.csv  data_load_forecast.csv  data_prod_price_forecast.csv  data_train_load_clustering.pkl  data_train_load_forecast.pkl  data_weather_forecast.csv  heating_prediction.csv  long_train_data.pkl  opt_res_dayahead_2021_07_30.csv  opt_res_dayahead_2021_09_09.csv  opt_res_dayahead_latest.csv  opt_res_latest.csv  opt_res_perfect_optim_cost.csv  opt_res_perfect_optim_profit.csv  opt_res_perfect_optim_self-consumption.csv  read_csv_plot_data.py  test_df_final.pkl  test_response_get_data_get_method.pbz2  test_response_openmeteo_get_method.pbz2  test_response_scrapper_get_method.pbz2  test_response_scrapper_method.pbz2  test_response_solarforecast_get_method.pbz2  test_response_solarforecast_method.pbz2  test_response_solcast_get_method.pbz2  test_response_solcast_method.pbz2  test_response_solcast_multiday.json
docs/: EMHASS_presentation.md  advanced_math_model.md  advanced_solvers.md  automations.md  battery_identification.md  conf.py  config.md  custom.css  darts_forecaster.md  develop.md  develop_ai_coders.md  differences.md  emhass.md  emhass.rst  forecasts.md  heat_topology.md  index.md  index.rst  installation_methods.md  intro.md  log.txt  lpems.md  main_core_concepts.md  mlforecaster.md  mlregressor.md  passing_data.md  plan_output_schema.md  publish_data.md  quick_start.md  requirements.txt  section_config.md  section_core.md  section_getting_started.md  section_reference.md  section_thermal.md  study_case.md  thermal_battery.md  thermal_model.md  usage_guide.md
docs/_static/css/: custom.css
docs/api/: healthz.schema.json
docs/api/v1/: last-run.schema.json  plan.schema.json
docs/cookbook/: _template.md  battery_aware_runtime_params.md  ev_evcc_executor.md  index.md  nodered_mpc_orchestration.md  tariff_demand_charge.md  transport_nodered_mpc_orchestration.md
docs/study_cases/: basic_no_pv.md  basic_pv.md  basic_pv_battery.md  dhw_walkthrough.md  ev.md  good_practices.md  heat_pump_walkthrough.md  index.md  legacy_cli.md  mpc.md  reference_configs.md
scripts/: benchmark_performance.py  dayahead_optim.sh  fix_pickle.py  generate_changelog.py  generate_openapi.py  load_clustering.py  load_clustering_stumpy.py  load_forecast_sklearn.py  optim_results_analysis.py  optimization_legacy.py  publish_data.sh  read_csv_plot_data.py  requirements.txt  save_pvlib_module_inverter_database.py  script_debug_forecasts.py  script_debug_optim.py  script_simple_thermal_model.py  script_thermal_model_optim.py  script_visualize_plots.py  special_config_analysis.py  special_options.json  use_cases_analysis.py
src/emhass/: battery_identification.py  command_line.py  command_line_async.py  connection_manager.py  csv_predictor.py  darts_forecaster.py  forecast.py  forecast_async copy.py  forecast_async.py  forecast_calibration.py  last_run.py  machine_learning_forecaster.py  machine_learning_forecaster_async.py  machine_learning_regressor.py  machine_learning_regressor_async.py  optimal_configuration.py  optimization.py  optimization.sync-conflict-20241112-112658-PG4BK6P.py  optimization_async.py  optimization_cvxpy.py  plan_store.py  read_csv_plot_data.py  retrieve_hass.py  retrieve_hass_async.py  utils.py  utils_async.py  web_server.py  web_server_async.py  websocket_client.py
src/emhass/data/: associations.csv  cec_inverters.pbz2  cec_modules.pbz2  config_defaults.json  emhass_inverters.csv  emhass_modules.csv
src/emhass/helpers/: weather_forecast_helper.py
src/emhass/static/: advanced.html  basic.html  configuration_list.html  configuration_script.js  openapi.json  script.js  style.css
src/emhass/static/data/: param_definitions.json  runtime_params.json
src/emhass/templates/: configuration.html  index.html  template.html
templates/: index.html
tests/: config_emhass.yaml  test_battery_identification.py  test_command_line_async_utils.py  test_command_line_utils.py  test_config_value_resilience.py  test_connection_manager.py  test_darts_forecaster.py  test_defaults_smoke.py  test_deferrable_states.py  test_forecast.py  test_forecast_async.py  test_forecast_calibration.py  test_last_run.py  test_machine_learning_forecaster.py  test_machine_learning_forecaster_async.py  test_machine_learning_regressor.py  test_machine_learning_regressor_async.py  test_multi_battery_config.py  test_multi_battery_optimization.py  test_multi_battery_publish.py  test_openapi.py  test_optimization.py  test_optimization_cvxpy.py  test_plan_store.py  test_retrieve_hass.py  test_retrieve_hass_async.py  test_runtime_params.py  test_schema_contract.py  test_soc_recovery_prototype.py  test_utils.py  test_utils_async.py  test_web_server.py  test_websocket_client.py
