[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emhass"
version = "0.12.2"
description = "An Energy Management System for Home Assistant"
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = [{ name = "David HERNANDEZ", email = "davidusb@gmail.com" }]
license = { text = "MIT" }
keywords = ["energy", "management", "optimization", "hass"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26.4, <2.3.0",
    "scipy==1.13.1",
    "pandas>=2.1.1",
    "pvlib>=0.10.3",
    "protobuf>=5.29.1",
    "pytz>=2023.4",
    "requests>=2.25.1",
    "beautifulsoup4>=4.12.3",
    "h5py>=3.12.1",
    "pulp==2.8.0",
    "pyyaml>=6.0.1",
    "tables>=3.9.1",
    "skforecast>=0.14.0",
    "flask>=3.1.0",
    "waitress>=3.0.2",
    "plotly>=6.0.0rc0"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]
test = ["requests_mock", "pytest", "coverage", "snakeviz", "ruff", "tabulate"]

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-data]
emhass = [
    "templates/index.html",
    "templates/template.html",
    "templates/configuration.html",
    "static/advanced.html",
    "static/basic.html",
    "static/script.js",
    "static/configuration_script.js",
    "static/style.css",
    "static/configuration_list.html",
    "static/img/emhass_icon.png",
    "static/img/emhass_logo_short.svg",
    "static/img/feather-sprite.svg",
    "static/data/param_definitions.json",
    "data/cec_modules.pbz2",
    "data/cec_inverters.pbz2",
    "data/associations.csv",
    "data/config_defaults.json",
]

[project.scripts]
emhass = "emhass.command_line:main"

[project.urls]
Homepage = "https://github.com/davidusb-geek/emhass"
