[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["emhass"]

[project]
name = "emhass"
version = "0.13.0.post1"
description = "An Energy Management System for Home Assistant"
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [{ name = "David HERNANDEZ", email = "davidusb@gmail.com" }]
license = "MIT"
keywords = ["energy", "management", "optimization", "hass"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0, <2.3.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "pvlib>=0.11.0",
    "protobuf>=5.29.3",
    "pytz>=2024.2",
    "requests>=2.32.2",
    "h5py>=3.12.1",
    "pulp>=2.8.0",
    "pyyaml>=6.0.2",
    "tables>=3.10.0",
    "skforecast>=0.14.0",
    "flask>=3.1.0",
    "waitress>=3.0.2",
    "plotly>=6.0.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]
# can add "mypy"
test = ["requests_mock", "pytest", "coverage", "snakeviz", "ruff", "tabulate", "hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["emhass"]

[tool.hatch.build.targets.sdist]
packages = ["emhass"]
include = [
    "/src/emhass/templates/index.html",
    "/src/emhass/templates/template.html",
    "/src/emhass/templates/configuration.html",
    "/src/emhass/static/advanced.html",
    "/src/emhass/static/basic.html",
    "/src/emhass/static/script.js",
    "/src/emhass/static/configuration_script.js",
    "/src/emhass/static/style.css",
    "/src/emhass/static/configuration_list.html",
    "/src/emhass/static/img/emhass_icon.png",
    "/src/emhass/static/img/emhass_logo_short.svg",
    "/src/emhass/static/img/feather-sprite.svg",
    "/src/emhass/static/data/param_definitions.json",
    "/src/emhass/data/cec_modules.pbz2",
    "/src/emhass/data/cec_inverters.pbz2",
    "/src/emhass/data/associations.csv",
    "/src/emhass/data/config_defaults.json"
]

[project.scripts]
emhass = "emhass.command_line:main"

[project.urls]
Homepage = "https://github.com/davidusb-geek/emhass"

#strict is strict
#[tool.mypy]
#strict =  true
